force-app/main/default/objects/Account/fields/demo_test_2__c.field-meta.xml
<CustomField>
    <fullName>demo_test_2__c</fullName>
    <label>demo test 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>