force-app/main/default/objects/Account/fields/demo_text__c.field-meta.xml
<CustomField>
    <fullName>demo_text__c</fullName>
    <label>demo text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>