force-app/main/default/objects/Account/fields/JS004_Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>JS004_Custom_Text__c</fullName>
    <description>adding a sample field</description>
    <label>JS004 Custom Text</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>