force-app/main/default/objects/Account/fields/js004_number__c.field-meta.xml
<CustomField>
    <fullName>js004_number__c</fullName>
    <label>js004 number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>